syntax = "proto3";

package protocol;

message ApplicationCreated {
    string id = 1;
    string deploymentId = 2;
}

message ApplicationUpdated {
    string id = 1;
    string deploymentId = 2;
}

message ApplicationDeleted {
    string id = 1;
    string runnerId = 2;
    string name = 3;
}

message ApplicationStatusChanged {
    string id = 1;
}

message ApplicationDeploymentRequest {
    string id = 1;
    string deploymentId = 2;
}
